Row gap fixed

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1059,7 +1059,10 @@ p.cardText {
   }
 
   @media (max-width: 360px) {
-		padding: 64px 24px;
+	  padding-top: 32px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 48px;
   }
 
   .portfolio-container {
@@ -1068,6 +1071,12 @@ p.cardText {
       grid-template-columns: 1fr;
       row-gap: 48px;
       grid-row-gap: 48px;
+    }
+
+    @media (max-width: 360px) {
+      grid-template-columns: 1fr;
+      row-gap: 32px;
+      grid-row-gap: 32px;
     }
   }
 
@@ -1160,11 +1169,6 @@ p.cardText {
 
     @media (max-width: 360px) {
       display: block;
-      grid-template-columns: 1fr;
-      column-gap: 32px;
-      row-gap: 48px;
-      grid-column-gap: 32px;
-      grid-row-gap: 48px;
       max-width: calc(100vw - 48px);
 
       .portfolio-content-container {
